--- a/maskAnimation/Base.lproj/Main.storyboard
+++ b/maskAnimation/Base.lproj/Main.storyboard
@@ -28,11 +28,23 @@
                                     <constraint firstAttribute="height" constant="192" id="d6A-fc-4wy"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6d-Wn-FBQ">
+                                <rect key="frame" x="106.5" y="440" width="108" height="32"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <state key="normal" title="Animate Mask">
+                                    <color key="titleColor" red="0.98077768087387085" green="0.56676393747329712" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="animateTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aFR-OY-Cs4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6j5-Jx-FLS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5Yt-Nk-Grf"/>
+                            <constraint firstItem="B6d-Wn-FBQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EjE-7V-pYx"/>
                             <constraint firstItem="6j5-Jx-FLS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Uc1-sS-2PG"/>
+                            <constraint firstItem="B6d-Wn-FBQ" firstAttribute="top" secondItem="6j5-Jx-FLS" secondAttribute="bottom" constant="60" id="uYf-fb-FTM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -41,6 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33.75" y="34.859154929577464"/>
         </scene>
     </scenes>
     <resources>
